--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 ---
-layout: redirect
-redirect_to: /about/
+layout: null
 ---
+
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="refresh" content="0;url={{ '/about/' | relative_url }}">
+  <link rel="canonical" href="{{ '/about/' | relative_url }}">
+</head>
+</html>
